This is what we have Currently

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <html>
-    <head>
-        <title>Mesh</title>
-    </head>
-    <body>
-        Future site of Mesh messaging app.
-    </body>
+
+<head>
+    <title>Mesh</title>
+</head>
+<!-- This page should have 2 links:
+         one to the create user page, and one to the login page. -->
+<header>
+    <h1>
+        Welcome to Mesh
+    </h1>
+    <h3>
+        Login if you already have a mesh account.<br>
+        Sign up if you do not have a mesh account.
+    </h3>
+</header>
+
+<body>
+    <form method="get" action="login.html">
+        <button type="submit">Log In</button>
+    </form>
+    <form method="get" action="signup.html">
+        <button type="submit">Sign Up</button>
+    </form>
+</body>
+
 </html>
