--- a/error404.html
+++ b/error404.html
@@ -2,7 +2,9 @@
 <head>
 <title>HTTP 404 - File Not Found</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body bgcolor="#FFFFFF" text="#000000" style="font-family: Arial; font-size: 14px">
 <h2>The page cannot be found!</h2><br>
